--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.12.0
+  mobile_scanner: ^7.1.4
   persistent_bottom_nav_bar: ^6.2.1
 
 dev_dependencies:
