--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   font_awesome_flutter: ^10.12.0
   mobile_scanner: ^7.1.4
   persistent_bottom_nav_bar: ^6.2.1
+  http: ^1.2.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
